[package]
name = "qbitbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow            = "1.0.95"
clap              = { version = "4.5.23", features = [ "derive" ] }
config            = "0.15.4"
dirs              = "5.0.1"
log               = "0.4.17"
pretty_env_logger = "0.4.0"
teloxide          = { version = "0.13.0", features = [ "rustls", "ctrlc_handler" ] }
teloxide-macros   = "0.8"
tokio             = { version = "1.23.0", features = [ "macros", "rt-multi-thread" ] }
serde             = "1.0.217"
qbit-rs           = { git = "https://github.com/George-Miao/qbit", rev = "6b63683" }
url               = "2.5.2"
mime              = "0.3.17"